# Learning-C

./: README.md
Binary-Search-Tree/: CMakeLists.txt
Binary-Search-Tree/src/: BSTree.c  BSTree.h  CMakeLists.txt
Binary-Search-Tree/tests/: bstree_add_and_print_test.c  bstree_add_and_remove_test.c  bstree_exists_test.c  bstree_get_min_max_test.c  bstree_get_values_test.c  tests.h
Breadth-First-Search/: Breadth_First_Search.c  Breadth_First_Search.h  CMakeLists.txt  Makefile
Breadth-First-Search/src/: Breadth_First_Search.c  Breadth_First_Search.h
Breadth-First-Search/tests/: CMakeLists.txt  graph_fill.c  tests.c  tests.h
Dict/: CMakeLists.txt  Dict.c  Dict.h  Makefile  tests.elf
Dict/src/: CMakeLists.txt  Dict.c
Dict/tests/: CMakeLists.txt  dict_set_clean_int_test.c  dict_set_clean_string_test.c  dict_set_delete_int_test.c  dict_set_delete_string_test.c  dict_set_exists_int_test.c  dict_set_exists_string_test.c  dict_set_get_int_test.c  dict_set_get_keys_int_test.c  dict_set_get_string_test.c  tests.c  tests.h
Dijkstra/: CMakeLists.txt  Dijkstra.c  Makefile
Dijkstra/src/: CMakeLists.txt  Dijkstra.c  Dijkstra.h
Dijkstra/tests/: CMakeLists.txt  tests.c  tests.h
Graph/: CMakeLists.txt  Graph.c  Graph.h  Makefile
Graph/src/: CMakeLists.txt  Graph.h
Graph/tests/: CMakeLists.txt  graph_add_get_test.c  graph_add_print_test.c  graph_fill.c  graph_fill_get_node_names_test.c  graph_fill_print_test.c  graph_node_add_get_siblings_test.c  graph_node_create_delete_test.c  graph_node_get_distance_test.c  tests.c  tests.h
List/: CMakeLists.txt  List.c  List.h  Makefile
List/src/: CMakeLists.txt  List.h
List/tests/: CMakeLists.txt  list_push_back_clean_int_test.c  list_push_back_clean_string_test.c  list_push_back_pop_front_int_test.c  list_push_back_pop_front_string_test.c  list_push_front_check_value_exists_int_test.c  list_push_front_check_value_exists_string_test.c  list_push_front_clean_int_test.c  list_push_front_clean_string_test.c  list_push_front_delete_head_by_index_int_test.c  list_push_front_delete_middle_by_index_int_test.c  list_push_front_delete_tail_by_index_int_test.c  list_push_front_get_by_index_int_test.c  list_push_front_get_by_index_string_test.c  list_push_front_get_by_value_int_test.c  list_push_front_get_by_value_string_test.c  list_push_front_set_by_index_int_test.c  list_push_front_set_by_index_string_test.c  list_push_pop_back_int_test.c  list_push_pop_back_string_test.c  list_push_pop_front_int_test.c  list_push_pop_front_string_test.c  tests.c  tests.h
Stack/: CMakeLists.txt  Makefile  Stack.c  Stack.h
Stack/src/: CMakeLists.txt  Stack.c  Stack.h
Stack/tests/: CMakeLists.txt  stack_clean_int_test.c  stack_clean_string_test.c  stack_push_pop_int_test.c  stack_push_pop_string_test.c  tests.c  tests.h
